--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,3 +15,10 @@
   </li>
 </ul>
 
+<div *ngFor="let product of products">
+  {{product.title}}
+  <img [src]="product.image" alt="">
+  {{product.price}}
+
+</div>
+
