Uso de Inputs y Outputs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <input type="text" [(ngModel)]="title" >
 <h1>{{title}}</h1>
 
-<app-product></app-product>
+
 
 <div *ngIf="title==='Nicolas'">
   esto es un Nicolas
@@ -33,9 +33,7 @@
 </ul>
 
 <div *ngFor="let product of products">
-  {{product.title}}
-  <img [src]="product.image" alt="">
-  {{product.price}}
+  <app-product (productClicked)="clickProduct($event)" [product]="product"></app-product>
 </div>
 
 
