--- a/src/app/components/product.component.scss
+++ b/src/app/components/product.component.scss
@@ -2,7 +2,9 @@
     margin: 2px;
     border: 1px solid black;
     border-radius: 5px;
+    text-align: center;
     display: block;
+    justify-content: space-evenly;
 }
 
 img {
