--- a/src/app/components/product.component.html
+++ b/src/app/components/product.component.html
@@ -1,4 +1,6 @@
-<h3>{{product.title}}</h3>
+<h3>{{product.title | uppercase}}</h3>
 <img [src]="product.image" alt="">
-<strong>${{product.price}}</strong>
+<strong>{{product.price |currency}}</strong>
+<p>{{product.description |slice:0:11}}</p>
+<p>{{today |date:'shortDate'}}</p>
 <button (click)="addCart()">Agregar al carrito</button>
