Se genero pagina 404, se coloco Barra de navegación a los componentes principales

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<nav>
+    <a routerLink="/home" routerLinkActive="active">Home</a>
+    <a routerLink="/products" routerLinkActive="active">Producto</a>
+    <a routerLink="/contact" routerLinkActive="active">Contacto</a>
+</nav>
