Se genero un boton para ingresar al modulo de productos por detalle

--- a/src/app/components/product.component.html
+++ b/src/app/components/product.component.html
@@ -4,3 +4,4 @@
 <p>{{product.description |slice:0:11}}</p>
 <p>{{today |date:'shortDate'}}</p>
 <button (click)="addCart()">Agregar al carrito</button>
+<a [routerLink]="['/products', product.id]">Ver detalle</a>
