--- a/src/app/product/components/product/product.component.html
+++ b/src/app/product/components/product/product.component.html
@@ -1,7 +1,9 @@
-<h3 appHighlight>{{product.title | uppercase}}</h3>
-<img [src]="product.image" alt="">
-<strong>{{product.price |currency}}</strong>
-<p>{{product.description |slice:0:11}}</p>
-<p>{{today |date:'shortDate'}}</p>
-<button (click)="addCart()">Agregar al carrito</button>
-<a [routerLink]="['/products', product.id]">Ver detalle</a>
+<div>
+    <h3 appHighlight>{{product.title | uppercase}}</h3>
+    <img [src]="product.image" alt="">
+    <strong>{{product.price |currency}}</strong>
+    <p>{{product.description |slice:0:11}}</p>
+    <p>{{today |date:'shortDate'}}</p>
+    <button (click)="addCart()" mat-raised-button color='primary'>Agregar al carrito</button>
+    <a [routerLink]="['/products', product.id]">Ver detalle</a>
+</div>
