--- a/src/app/product/components/products/products.component.html
+++ b/src/app/product/components/products/products.component.html
@@ -1,7 +1,4 @@
 <div class="product-list">
-    <app-product 
-      *ngFor="let product of products" 
-      (productClicked)="clickProduct($event)" 
-      [product]="product">
-    </app-product>
-  </div>
+  <app-product *ngFor="let product of products" (productClicked)="clickProduct($event)" [product]="product">
+  </app-product>
+</div>
