--- a/src/app/product/components/product/product.component.scss
+++ b/src/app/product/components/product/product.component.scss
@@ -1,12 +1,22 @@
-:host {
-    margin: 2px;
-    border: 1px solid black;
-    border-radius: 5px;
-    text-align: center;
+// :host {
+//     margin: 2px;
+//     border: 1px solid black;
+//     border-radius: 5px;
+//     text-align: center;
+//     display: block;
+//     justify-content: space-evenly;
+// }
+.crop-image {
     display: block;
-    justify-content: space-evenly;
-}
-
-img {
-    max-width: 100%;
-}
+    height: 300px;
+    width: 100%;
+    img {
+      object-fit: contain;
+      height: 100%;
+      width: 100%;
+      object-position: center;
+    }
+  }
+  
+  
+  
