--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,15 @@
 .product-list{
     display: grid;
     grid-template-columns: repeat(1,1fr);
+    grid-gap: 50px 20px;
+}
+
+.container {
+    width: 100%;
+    padding-right: 0px;
+    padding-left: 0px ;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 @media (min-width: 576px){
@@ -14,7 +23,16 @@
         display: grid;
         grid-template-columns: repeat(3,1fr);
     } 
+    .container {
+        max-width: 1110px;
+        padding-right: 16px;
+        padding-right: 16px;
+    }
 }
 
-html, body { height: 100%; }
+
+html, body { height: 100%; 
+}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
