Se creo un crud para los elementos de productos

--- a/src/app/product/components/product-detail/product-detail.component.html
+++ b/src/app/product/components/product-detail/product-detail.component.html
@@ -1,10 +1,16 @@
-<div>
-    <img [src]="product.image" alt="">
-</div>
-<div>
-    <ul>
-        <li>Nombre: {{product.title}}</li>
-        <li>Precio: {{product.price | currency}}</li>
-    </ul>
-    <p>{{product.description}}</p>
+<div *ngIf="product">
+    <div>
+        <img [src]="product.image" alt="">
+    </div>
+    <div>
+        <ul>
+            <li>Nombre: {{product.title}}</li>
+            <li>Precio: {{product.price | currency}}</li>
+        </ul>
+        <p>{{product.description}}</p>
+    </div>
+    <button (click)="createProduct()">Crear</button>
+    <button (click)="updateProduct()">actualizar</button>
+    <button (click)="deleteProduct()">eliminar</button>
+
 </div>
