Se refactoriza el codigo

--- a/src/app/admin/components/nav/nav.component.html
+++ b/src/app/admin/components/nav/nav.component.html
@@ -7,7 +7,8 @@
     <mat-nav-list>
       <a mat-list-item routerLink="/admin/create">Crear Producto</a>
       <a mat-list-item routerLink="/admin/dashboard">Mirar Dashboard</a>
-      <a mat-list-item routerLink="/admin/table">Tabla de Productos</a>
+      <a mat-list-item routerLink="/admin/table">Inventario</a>
+      <a mat-list-item routerLink="/admin/products-list">Productos</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
