--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,46 +1,45 @@
 <footer>
-    <div class="container">
-      <div class="row between-md">
-        <div class="col-xs-12 col-md-4">
-          <div class="box">
-            <h3>Productos</h3>
-            <ul>
-              <li>
-                <a routerLink="/products" [queryParams]="{ type: 'news' }"
-                  >Nuevos Productos</a
-                >
-              </li>
-              <li>
-                <a routerLink="/products" [queryParams]="{ type: 'offer' }"
-                  >En oferta</a
-                >
-              </li>
-              <li>
-                <a routerLink="/products" [queryParams]="{ type: 'latest' }"
-                  >Últimos productos</a
-                >
-              </li>
-            </ul>
-          </div>
+  <div class="container">
+    <div class="row between-md">
+      <div class="col-xs-12 col-md-4">
+        <div class="box">
+          <h3>Productos</h3>
+          <ul>
+            <li>
+              <a routerLink="/products" [queryParams]="{ type: 'news' }">Nuevos Productos</a>
+            </li>
+            <li>
+              <a routerLink="/products" [queryParams]="{ type: 'offer' }">En oferta</a>
+            </li>
+            <li>
+              <a routerLink="/products" [queryParams]="{ type: 'latest' }">Últimos productos</a>
+            </li>
+          </ul>
         </div>
-        <div class="col-xs-12 col-md-4">
-          <div class="box">
-            <h3>Acerca de PlatziStore</h3>
-            <ul>
-              <li><a routerLink="/about-us">Sobre nosotros</a></li>
-              <li><a routerLink="/stores">Nuestras tiendas</a></li>
-            </ul>
-          </div>
+      </div>
+      <div class="col-xs-12 col-md-4">
+        <div class="box">
+          <h3>Acerca de PlatziStore</h3>
+          <ul>
+            <li><a routerLink="/about-us">Sobre nosotros</a></li>
+            <li><a routerLink="/stores">Nuestras tiendas</a></li>
+          </ul>
         </div>
-        <div class="col-xs-12 col-md-4">
-          <div class="box">
+      </div>
+      <div class="col-xs-12 col-md-4">
+        <div class="box contactFooter">
+          <div>
             <h3>Contacto</h3>
-            <!-- <mat-form-field color="accent" class="full-width">
-                  <input [formControl]="emailInput" matInput placeholder="Su correo" type="email">
-                </mat-form-field>
-                <button (click)="registerMail()" [disabled]="emailInput.invalid" mat-raised-button color="accent">Suscribirse</button> -->
+          </div>
+          <mat-form-field>
+            <input matInput placeholder="Digite su correo" [formControl]='emailField' type="email">
+          </mat-form-field>
+          <div>
+            <button mat-raised-button *ngIf="emailField.valid" (click)="sendMail()">enviar</button>
+            <p *ngIf='emailField.invalid'>En espera del correo</p>
           </div>
         </div>
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
