--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -15,9 +15,15 @@ footer {
               padding-right: 5px;
           }
     }
-    input{
+    p{
       color: white;
     }
+    input{
+      text-align: center;
+      color: white;
+      margin: 0px 0px 10px 0px;
+    }
+    
     ul {
       list-style: none;
       margin: 0px;
@@ -42,4 +48,11 @@ footer {
     width: auto;
     margin-left: 15rem;
 }
+
+.contactFooter{
+  text-align: center;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.274);
+}
+
 
