--- a/src/app/admin/components/products-list/products-list.component.scss
+++ b/src/app/admin/components/products-list/products-list.component.scss
@@ -1,5 +1,11 @@
 .buttonEditar{
     margin-right: 10px;
-    background-color: yellow;
-    color: black;
+    background-color: rgb(218, 218, 28);
+    color: white;
+}
+
+.button-create-new-product{
+    margin: 5px;
+    background-color: green;
+    color: white;
 }
