--- a/src/app/admin/components/products-list/products-list.component.html
+++ b/src/app/admin/components/products-list/products-list.component.html
@@ -4,24 +4,24 @@
     <mat-table [dataSource]="products" class="mat-elevation-z8">
       <ng-container matColumnDef="id">
         <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{ element.id }} </mat-cell>
+        <mat-cell *matCellDef="let product"> {{ product.id }} </mat-cell>
       </ng-container>
   
       <ng-container matColumnDef="title">
         <mat-header-cell *matHeaderCellDef> Title </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{ element.title }} </mat-cell>
+        <mat-cell *matCellDef="let product"> {{ product.title }} </mat-cell>
       </ng-container>
   
       <ng-container matColumnDef="price">
         <mat-header-cell *matHeaderCellDef> Price </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{ element.price }} </mat-cell>
+        <mat-cell *matCellDef="let product"> {{ product.price }} </mat-cell>
       </ng-container>
   
       <ng-container matColumnDef="actions">
         <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
-        <mat-cell *matCellDef="let element">
-          <button mat-stroked-button color="primary" class="buttonEditar">Editar</button>
-          <button mat-raised-button color="warn" (click)="deleteProduct(element.id)" >Eliminar</button>
+        <mat-cell *matCellDef="let product">
+          <button mat-stroked-button color="primary" class="buttonEditar" [routerLink]="['edit',product.id]">Editar</button>
+          <button mat-raised-button color="warn" (click)="deleteProduct(product.id)" >Eliminar</button>
         </mat-cell>
       </ng-container>
   
