Se crea el login y el register con firebase

--- a/src/app/product/components/product-detail/product-detail.component.html
+++ b/src/app/product/components/product-detail/product-detail.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="product">
     <div>
-        <img [src]="product.image" alt="">
+        <img class="image" [src]="product.image" alt="">
     </div>
     <div>
         <ul>
