--- a/src/app/admin/components/nav/nav.component.html
+++ b/src/app/admin/components/nav/nav.component.html
@@ -9,6 +9,7 @@
       <a mat-list-item routerLink="/admin/dashboard">Mirar Dashboard</a>
       <a mat-list-item routerLink="/admin/table">Inventario</a>
       <a mat-list-item routerLink="/admin/products">Productos</a>
+      <button mat-list-item (click)='logout()'>Salir</button>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
