--- a/src/app/admin/components/form-product/form-product.component.scss
+++ b/src/app/admin/components/form-product/form-product.component.scss
@@ -14,3 +14,10 @@
     background-color: rgb(6, 255, 6);
     color: white;
 }
+
+form {
+    img {
+        width: 200px;
+        height: 200px;
+    }
+}
