--- a/src/app/home/components/banner/banner.component.html
+++ b/src/app/home/components/banner/banner.component.html
@@ -1,4 +1,4 @@
-<div class="swiper-container">
+<div class="swiper-container bodyHome" >
     <div class="swiper-wrapper">
         <div class="swiper-slide" *ngFor="let img of images">
             <img [src]="img" alt="imagen del banner">
