--- a/src/app/product/components/product-detail/product-detail.component.html
+++ b/src/app/product/components/product-detail/product-detail.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="product">
+<div *ngIf="(product$ | async) as product">
     <div>
         <img class="image" [src]="product.image" alt="">
     </div>
