Se genero un metodo para traer datos aleatorios y poder manejar el objeto, en products.service y se mostro en product.detal

--- a/src/app/product/components/product-detail/product-detail.component.html
+++ b/src/app/product/components/product-detail/product-detail.component.html
@@ -12,5 +12,6 @@
     <button (click)="createProduct()">Crear</button>
     <button (click)="updateProduct()">actualizar</button>
     <button (click)="deleteProduct()">eliminar</button>
+    <button (click)="getRandonUsers()">Dato Randon</button>
 
 </div>
