Se generaron tokens para validaciónes de entorno

--- a/src/app/product/components/product-detail/product-detail.component.html
+++ b/src/app/product/components/product-detail/product-detail.component.html
@@ -13,5 +13,6 @@
     <button (click)="updateProduct()">actualizar</button>
     <button (click)="deleteProduct()">eliminar</button>
     <button (click)="getRandonUsers()">Dato Randon</button>
+    <button (click)="getFile()">Traer Archivon</button>
 
 </div>
