--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -19,6 +19,7 @@
       </mat-card-content>
       <mat-card-actions>
         <button [disabled]="form.invalid" mat-raised-button type="submit">Ingresar</button>
+        <button [disabled]="form.invalid" mat-raised-button type="button" (click)="loginApi()">Login Api</button>
       </mat-card-actions>
     </mat-card>
     
